@@ -292,27 +292,30 @@ If you wish to override this, you can provide your own routine to generate value
 =item inflate_integer
 
 TOML integers are 64 bit and may not match the size of the compiled perl's
-internal integer type. By default, integers are left as-is as perl strings
-which may be upgraded as needed by the caller.
+internal integer type. By default, C<TOML::Tiny> coerces numbers that fit
+within a perl number by adding C<0>. For bignums, a L<Math::BigInt> is
+returned. This may be overridden by providing an inflation routine:
 
   my $parser = TOML::Tiny->new(
     inflate_integer => sub{
-      use bignum;
-      return 0 + shift;
-    }
+      my $parsed = shift;
+      return sprintf 'the number "%d"', $parsed;
+    };
   );
 
 =item inflate_float
 
 TOML floats are 64 bit and may not match the size of the compiled perl's
-internal float type. By default, floats are left as-is as perl strings which
-may be upgraded as needed by the caller.
+internal float type. As with integers, floats are coerced to numbers and large
+floats are upgraded to L<Math::BigFloat>s. The special strings C<NaN> and
+C<inf> may also be returned. You can override this by specifying an inflation
+routine.
 
   my $parser = TOML::Tiny->new(
     inflate_float => sub{
-      use bignum;
-      return 0 + shift;
-    }
+      my $parsed = shift;
+      return sprintf '"%0.8f" is a float', $parsed;
+    };
   );
 
 =item strict_arrays
